--- a/whitehotrobot.com/package.json
+++ b/whitehotrobot.com/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build;./public/propagateSupplemental.sh",
+    "build": "vue-cli-service build;./public/propagateSupplemental.sh; ./push.sh",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
