--- a/mail.whitehotrobot.com/.htaccess
+++ b/mail.whitehotrobot.com/.htaccess
@@ -25,7 +25,7 @@ php_value   session.gc_probability   1
 <IfModule mod_rewrite.c>
 Options +SymLinksIfOwnerMatch
 RewriteEngine On
-RewriteRule ^favicon\.ico$ skins/larry/images/favicon.ico
+#RewriteRule ^favicon\.ico$ skins/larry/images/favicon.ico
 
 # security rules:
 # - deny access to files not containing a dot or starting with a dot
